add user create

--- a/views/home/index.html
+++ b/views/home/index.html
@@ -20,11 +20,11 @@
 				<a href="/me/profile">个人信息维护</a>
 			</li>
 			<li>
-				<a href="/me/users">通讯录</a>
+				<a href="/me/users">用户</a>
 			</li>
 			<li>
-				<a href="/me/teams">用户组管理</a>
-			</li>
+				<a href="/me/teams">用户组</a>
+			</li>	
 		</ul>
 	</div>
 
